feat: update mobile layout components

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "embla-carousel-react": "8.5.1",
     "html2pdf.js": "latest",
     "input-otp": "1.4.1",
+    "katex": "^0.16.22",
     "lucide-react": "^0.454.0",
     "mermaid": "latest",
     "monaco-editor": "latest",
@@ -65,8 +66,10 @@
     "react-resizable-panels": "^2.1.7",
     "react-syntax-highlighter": "latest",
     "recharts": "2.15.0",
+    "rehype-katex": "^7.0.1",
     "rehype-raw": "latest",
     "remark-gfm": "latest",
+    "remark-math": "^6.0.0",
     "sonner": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -78,6 +81,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
